fix issue with headers overflowing

--- a/pages/style/base.scss
+++ b/pages/style/base.scss
@@ -51,7 +51,6 @@ html body {
       color: #999;
       text-align: right;
       text-transform: uppercase;
-      margin-top: -1em;
   }
 
 
