--- a/pages/style/block.scss
+++ b/pages/style/block.scss
@@ -64,7 +64,7 @@ html body {
         min-height: 50px;
         text-align: center;
         margin: -20px;
-        margin-bottom: 24px;
+        margin-bottom: .5rem;
         padding-left: 20px;
         padding-right: 20px;
       }
